# wukong_fetch_ocr

./: .gitignore  README.md  pyproject.toml  requirements-ocr.txt  requirements-paddle.txt  requirements.txt
docs/: wukong-invite-automation.md
packaging/: README_wukong_fetch_ocr_NOVICE.txt  run_test_01_fetch_ocr.spec
scripts/: _analyze_wukong_js.py  _analyze_wukong_office.py  _fetch_config_yaml.py  _find_invite_image_config.py  _probe_cdn_banner.py  _probe_dingtalk.py  _probe_wukong_page.py  build_wukong_fetch_ocr_exe.ps1  diag_dingtalk_pywinauto_uia.py  diag_mouse_to_screen_center.py  input_assistant_client.py  input_assistant_server.py  ocr_one_png.py  register_input_assistant_task.ps1  run_test_01_fetch_ocr.py  run_test_02_wukong_window.py  save_invite_preprocess_debug.py  watch_invite_until_update.py
src/wukong_invite/: __init__.py  __main__.py  clipboard_util.py  config.py  hudong_fetch.py  input_assistant_defaults.py  input_assistant_flow.py  input_assistant_win.py  invite_image_preprocess.py  ocr_extract.py  orchestrator.py  state_store.py  ui_dingtalk.py
tests/: test_hudong_fetch.py  test_invite_preprocess.py  test_ocr_pick.py  test_state_store.py
